--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -293,3 +293,7 @@
     margin-top: 1.5rem;
   }
 }
+
+.cursor-large-pointer {
+  cursor: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='72' height='72' viewBox='0 0 24 24' fill='black' stroke='white' stroke-width='1'%3e%3cpath d='M14.55,14.85,12.2,19.35a.74.74,0,0,1-1.35-.13L7.1,9.82,2.65,12.17a.75.75,0,0,1-.85-1.23l12-5.5a.75.75,0,0,1,.9.9Z'/%3e%3c/svg%3e") 0 0, pointer;
+}
